# RFID-DB-Web

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LinkedIn_Post.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
main/: CMakeLists.txt  database.h  database_new.c  main.c  rc522.c  rc522.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/web/: index.html  script.js  style.css
